# tauritest

./: .gitignore  index.html  package.json  pnpm-lock.yaml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/lib/: Cargo.toml  lib.rs
src-tauri/src/lib/ldap/: settings.rs
