[package]
name = "tauritest"
version = "0.1.0"
description = "LDAP Search"
authors = ["jerome.bousquie"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.19", features = [] }
tauri-plugin-shell = "2.0.0-beta.5"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1"
searchuser = {path="src/lib/"}

