[package]
name = "searchuser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "searchuser"
path = "lib.rs"

[dependencies]
serde = "1.0.193"
toml = "0.8.8"
tokio = "1.36.0"

[dependencies.ldap3]
version = "0.11.3"